--- a/index.html
+++ b/index.html
@@ -1,113 +1,69 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>RDHS Trincomalee - Official Website</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            line-height: 1.6;
-        }
-        header {
-            background-color: #005a9c;
-            color: white;
-            text-align: center;
-            padding: 20px;
-        }
-        .marquee {
-            background-color: #f0f0f0;
-            padding: 10px 0;
-            font-size: 16px;
-        }
-        nav {
-            background-color: #0073e6;
-            padding: 10px;
-            text-align: center;
-        }
-        nav a {
-            color: white;
-            margin: 0 15px;
-            text-decoration: none;
-            font-weight: bold;
-        }
-        main {
-            padding: 20px;
-        }
-        h2 {
-            color: #005a9c;
-        }
-        footer {
-            background-color: #333;
-            color: white;
-            text-align: center;
-            padding: 15px;
-        }
-    </style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>RDHS Trincomalee</title>
+  <style>
+    body { font-family: Arial, sans-serif; margin: 0; padding: 0; line-height: 1.6; }
+    header { background: #007bff; color: white; padding: 20px 10px; text-align: center; }
+    nav ul { list-style: none; display: flex; justify-content: center; padding: 0; margin: 0; background: #0056b3; }
+    nav ul li { margin: 0 15px; }
+    nav ul li a { color: white; text-decoration: none; font-weight: bold; }
+    .banner { background: #f4f4f4; padding: 30px; text-align: center; }
+    section { padding: 20px; max-width: 1000px; margin: auto; }
+    .services ul { list-style: disc; margin-left: 20px; }
+    footer { background: #333; color: white; padding: 20px; text-align: center; }
+  </style>
 </head>
 <body>
 
-    <header>
-        <h1>Regional Director of Health Services - Trincomalee</h1>
-    </header>
+  <header>
+    <h1>Regional Director of Health Services - Trincomalee</h1>
+  </header>
 
-    <div class="marquee">
-        <marquee behavior="scroll" direction="left">
-            <span style="font-weight: bold; color: #007bff;">Welcome to the Official Website of the Regional Director of Health Services – Trincomalee</span>&nbsp;&nbsp;&nbsp;
-            <span style="font-weight: bold; color: #28a745;">பிராந்திய சுகாதார சேவைகள் பணிப்பாளர் பணிமனை, திருகோணமலையின் உத்தியோகபூர்வ இணையதளத்திற்கு வரவேற்கிறோம்</span>&nbsp;&nbsp;&nbsp;
-            <span style="font-weight: bold; color: #e83e8c;">ත්‍රිකුණාමලය ප්‍රාදේශීය සෞඛ්‍ය සේවා අධ්‍යක්ෂකගේ නිල වෙබ් අඩවියට සාදරයෙන් පිළිගනිමු</span>
-        </marquee>
-    </div>
+  <nav>
+    <ul>
+      <li><a href="#vision">Vision</a></li>
+      <li><a href="#mission">Mission</a></li>
+      <li><a href="#services">Services</a></li>
+      <li><a href="#contact">Contact</a></li>
+    </ul>
+  </nav>
 
-    <nav>
-        <a href="#">Home</a>
-        <a href="#">Services</a>
-        <a href="#">Contact Us</a>
-        <a href="#">About</a>
-    </nav>
+  <div class="banner">
+    <marquee behavior="scroll" direction="left">
+      <strong>Welcome in English | தமிழில் வரவேற்கின்றோம் | සිංහල සාදරයෙන් පිළිගනිමු</strong>
+    </marquee>
+  </div>
 
-    <main>
-        <h2>Vision</h2>
-        <p>"To be the excellent organization in Trincomalee District to create a Healthier Community that contributes towards a Healthier Nation"</p>
+  <section id="vision">
+    <h2>Our Vision</h2>
+    <p>"To be the excellent organization in Trincomalee District to create a Healthier Community that contributes towards a Healthier Nation."</p>
+  </section>
 
-        <h2>Mission</h2>
-        <p>"To Assure a Healthier Community by ensuring equitable access to sustainable quality healthcare service while promoting self-reliance, personal responsibility and healthy lifestyle in Trincomalee District"</p>
+  <section id="mission">
+    <h2>Our Mission</h2>
+    <p>"To assure a Healthier Community by ensuring equitable access to sustainable quality healthcare services while promoting self-reliance, personal responsibility and a healthy lifestyle in Trincomalee District."</p>
+  </section>
 
-        <h2>Our Services</h2>
-        <h3>Curative Care Services</h3>
-        <ul>
-            <li>Planning of curative healthcare services under ministry guidance</li>
-            <li>Implementing and monitoring of plans in consultation with PDHS</li>
-            <li>Maintaining medical statistics and private sector regulation</li>
-            <li>Support for emergency units, surveys, and coordination with MOH</li>
-        </ul>
+  <section id="services" class="services">
+    <h2>Our Services</h2>
+    <ul>
+      <li>Curative Care Services</li>
+      <li>Preventive Health Services</li>
+      <li>Maternal and Child Health</li>
+      <li>School Health & Well-women Services</li>
+      <li>Family Planning</li>
+      <li>Mental Health, Oral Health & Health Promotion</li>
+    </ul>
+  </section>
 
-        <h3>Preventive Health Services</h3>
-        <ul>
-            <li>Planning, implementing, and monitoring preventive services</li>
-            <li>Support for occupational and waterborne disease prevention</li>
-            <li>Surveys, operational research, and coordination with MOH units</li>
-            <li>Services provided through 12 MOH units and public health staff</li>
-        </ul>
-
-        <h3>Other Services</h3>
-        <ul>
-            <li><strong>Maternal and Child Health:</strong> Antenatal, postnatal, immunization, growth monitoring</li>
-            <li><strong>School Health:</strong> School dental and general health services</li>
-            <li><strong>Well-women Services:</strong> Full medical check-ups and cancer screening</li>
-            <li><strong>Family Planning:</strong> Free contraceptive methods and counseling</li>
-            <li>Environmental & Occupational Health</li>
-            <li>Prevention of Communicable & Non-Communicable Diseases</li>
-            <li>Active Ageing, Mental Health & Health Promotion</li>
-            <li>Oral and Dental Health Services</li>
-        </ul>
-    </main>
-
-    <footer>
-        <p>© 2025 All Rights Reserved. Health Information Management Unit, Regional Director of Health Services, 120, Court Rd, Trincomalee.<br>
-        TP: 026 22 23 117 | Email: <a href="mailto:trincomoinfo@gmail.com" style="color: #00bfff;">trincomoinfo@gmail.com</a></p>
-    </footer>
+  <footer id="contact">
+    <p>📍 120, Court Rd, Trincomalee<br>
+    ☎️ 026 22 23 117 | 📧 trincomoinfo@gmail.com<br>
+    © 2025 All Rights Reserved - Health Information Management Unit</p>
+  </footer>
 
 </body>
 </html>
